--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": "Alexey Kunitsky",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,5 +11,9 @@
   },
   "devDependencies": {
     "vite": "^4.0.0"
+  },
+  "dependencies": {
+    "gsap": "^3.11.3",
+    "pixijs": "^7.0.4"
   }
 }
