--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "author": "Alexey Kunitsky",
+  "volta": {
+    "node": "18.12.1"
+  },
+  "engines": {
+    "node": "18.12.1"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
